[gd_scene load_steps=2 format=2]

[ext_resource path="res://Controllers/Music.gd" type="Script" id=1]

[node name="Music" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -41.053

[node name="Tween" type="Tween" parent="."]

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
